atualizando as imagens

--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
                 <h2 class="event__details__title">Ui/UX</h2>
                 <p class="event__details__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Expedita modi, facilis unde nostrum sed pariatur porro officiis nemo odit excepturi autem praesentium sapiente eos? Deserunt corporis libero dolorum nisi aut.</p>
             </div>
-            <img class="event__image" src="../images/frontend.png" alt="Front-end">
+            <img class="event__image" src="../images/ui-ux.png" alt="Front-end">
         </div>
     </section>
 
@@ -65,7 +65,7 @@
                 <h2 class="event__details__title">Data Science</h2>
                 <p class="event__details__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Expedita modi, facilis unde nostrum sed pariatur porro officiis nemo odit excepturi autem praesentium sapiente eos? Deserunt corporis libero dolorum nisi aut.</p>
             </div>
-            <img class="event__image" src="../images/frontend.png" alt="Front-end">
+            <img class="event__image" src="../images/data.png" alt="Front-end">
         </div>
     </section>
 
@@ -75,7 +75,7 @@
                 <h2 class="event__details__title">Back end</h2>
                 <p class="event__details__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Expedita modi, facilis unde nostrum sed pariatur porro officiis nemo odit excepturi autem praesentium sapiente eos? Deserunt corporis libero dolorum nisi aut.</p>
             </div>
-            <img class="event__image" src="../images/frontend.png" alt="Front-end">
+            <img class="event__image" src="../images/backend.png" alt="Front-end">
         </div>
     </section>
 
